# fluxmq

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_EXECUTION_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  JAVA_CLIENT_SUCCESS.md  Makefile  PERFORMANCE.md  PROJECT_IMPROVEMENT_ANALYSIS.md  README.md  cleanup.sh  monitor_logs.sh  run_benchmark.sh  simple_benchmark.py  simple_compression_test.py  test_cache_performance.py  test_client_compatibility.sh  test_cluster_setup.sh  test_compression_functionality.py  test_metadata_v9.py  test_metrics.py  test_multi_broker_replication.py  test_performance_quick.py  test_python_metrics.py  test_simple_produce.py
.cargo/: config.toml
.github/workflows/: release.yml
archive/python-tests-backup/: analyze_protocol_bytes.py  batch_producer_test.py  benchmark_9093.py  create_topic_and_test.py  detailed_protocol_debug.py  fast_producer_test.py  final_compatibility_test.py  java_test_verification.py  large_producer_test.py  multi_thread_producer_test.py  optimized_batch_test.py  optimized_performance_test.py  performance_test.py  port_9093_perf_test.py  quick_consumer_test.py  quick_perf_analysis.py  quick_perf_test.py  simple_benchmark.py  simple_producer_test.py  small_multi_test.py  test_admin_client_debug.py  test_admin_minimal.py  ultra_performance_test.py
archive/python-tests-backup/legacy_tests/: comprehensive_kafka_test.py  debug_admin.py  debug_fetch.py  debug_kafka_handshake.py  debug_offsetfetch.py  debug_producer.py  debug_protocol_selection.py  debug_protocol_test.py  debug_simple.py  force_metadata_test.py  simple_consumer_test.py  simple_fetch_test.py  simple_kafka_test.py  simple_metadata_test.py  simple_test_without_compression.py  test_admin_comprehensive.py  test_admin_list_topics.py  test_admin_simple.py  test_api_versions.py  test_consumer_record_batch.py  test_create_simple.py  test_create_topics.py  test_delete_topics.py  test_describe_configs.py  test_describe_topics.py  test_end_to_end_consumer.py  test_existing_topic.py  test_kafka_python_consumer.py  test_kafka_python_producer.py  test_list_topics.py  test_metadata_direct.py  test_offset_management.py  test_recovery.py  test_recovery_consumer.py  test_simple_list_topics.py
benchmark-suite/: README.md
benchmark-suite/analyzers/: generate_report.sh
benchmark-suite/monitors/: resource_monitor.sh  resource_monitor_total.sh
benchmark-suite/runners/: run_comparison.sh
benchmark-suite/setup/: configure_kafka.sh  install_kafka.sh  start_kafka.sh  stop_kafka.sh
cdc-test/: .gitignore  Cargo.toml  README.md  debezium-postgres-connector.json  docker-compose.yml  init-db.sql
cdc-test/src/: config.rs  lib.rs  metrics.rs
cdc-test/src/models/: debezium.rs  mod.rs
core/: API_REFERENCE.md  Cargo.toml  DEPLOYMENT_OPERATIONS_GUIDE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  JAVA_CLIENT_COMPATIBILITY_ANALYSIS.md  PERFORMANCE_BENCHMARK_RESULTS.md
core/benches/: storage_bench.rs
core/examples/: partition_demo.rs  performance_benchmark.rs  simple_consumer.rs  simple_producer.rs
core/src/: acl.rs  compression.rs  http_server.rs  lib.rs  main.rs  metrics.rs  metrics_optimized.rs  tls.rs  topic_manager.rs
core/src/broker/: README.md  handler.rs  mod.rs  server.rs
core/src/config/: mod.rs  settings.rs
core/src/consumer/: README.md  coordinator.rs  mod.rs  tests.rs
core/src/monitoring/: advanced_dashboard.rs  alert_manager.rs  mod.rs  performance_analyzer.rs  resource_monitor.rs
core/src/performance/: README.md  adaptive_io.rs  advanced_networking.rs  arena_allocator.rs  consumer_arena.rs  copy_file_range_zero_copy.rs  cross_platform_zero_copy.rs  custom_allocator.rs  fetch_sendfile.rs  generic_arena.rs  io_optimizations.rs  io_uring_zero_copy.rs  lockfree_storage.rs  memory.rs  mmap_storage.rs  mod.rs  network_simple.rs  numa_allocator.rs  object_pool.rs  protocol_arena.rs  quick_wins.rs  sendfile_zero_copy.rs  server_batch_aggregator.rs  simd_optimizations.rs  smart_pointers.rs  thread_affinity.rs  ultra_performance.rs  zero_copy_storage.rs
core/src/protocol/: README.md  high_performance_codec.rs  messages.rs  mod.rs  tests.rs
core/src/protocol/kafka/: adapter.rs  api_versions.rs  codec.rs  errors.rs  messages.rs  mod.rs
core/src/protocol/kafka/codec/: admin.rs  consumer_group.rs  fetch.rs  frame.rs  metadata.rs  mod.rs  primitives.rs  produce.rs  transaction.rs
core/src/replication/: README.md  cluster.rs  follower.rs  leader.rs  mod.rs  network.rs  raft.rs  tests.rs
core/src/storage/: README.md  high_performance.rs  immediate_optimizations.rs  index.rs  log.rs  message_cache.rs  mod.rs  segment.rs  tests.rs
core/src/transaction/: coordinator.rs  messages.rs  mod.rs  producer_id_manager.rs  state_machine.rs  transaction_log.rs
core/tests/: chaos_tests.rs  concurrent_tests.rs  copy_file_range_benchmark.rs  error_tests.rs  integration_tests.rs  io_uring_benchmark.rs  load_tests.rs  raft_adversarial_tests.rs  raft_network_integration_test.rs  replication_integration_test.rs  sendfile_benchmark.rs  ultra_performance_results.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  PERFORMANCE.md
fluxmq-client/: Cargo.toml  README.md
fluxmq-client/examples/: simple_consumer.rs  simple_producer.rs
fluxmq-client/src/: admin.rs  client.rs  config.rs  connection.rs  consumer.rs  error.rs  lib.rs  metrics.rs  producer.rs  protocol.rs
fluxmq-java-tests/: BENCHMARK_RULES.md  pom.xml  run_parallel_producers.sh
fluxmq-java-tests/src/main/java/: test_fixed_apiversions.java
fluxmq-java-tests/src/main/java/com/fluxmq/tests/: AdminApiTest.java  ComprehensiveBenchmark.java  ConsumerGroupTest.java  ContinuousThroughputBenchmark.java  FluxMQBenchmark.java  MegaBatchBenchmark.java  MinimalProducerTest.java  MultiThreadBenchmark.java  ResourceMonitor.java  TransactionTest.java  UltraPerformanceBenchmark.java
