[workspace]
resolver = "2"
members = ["cdc-test", "core", "fluxmq-client"]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["FluxMQ Team"]
license = "MIT"
repository = "https://github.com/gosuda/fluxmq"
homepage = "https://github.com/gosuda/fluxmq"
documentation = "https://docs.rs/fluxmq"
readme = "README.md"
keywords = ["kafka", "message-broker", "streaming", "distributed", "async"]
categories = ["network-programming", "asynchronous", "database-implementations"]
description = "High-performance message broker and streaming platform inspired by Apache Kafka"

# Shared dependencies across workspace members
[workspace.dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-stream = "0.1.18"
futures = "0.3.31"

# Time util 
chrono = { version = "0.4.43", features = ["serde"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bytes = { version = "1.11.0", features = ["serde"] }

# Storage and I/O
memmap2 = "0.9.9"
crc32fast = "1.5.0"
crc32c = "0.6.8"

# Concurrency
crossbeam = "0.8.4"
parking_lot = "0.12.5"

# Low-level networking
socket2 = "0.6.1"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging and monitoring
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
metrics = "0.24.3"

# Configuration
config = "0.15.19"
clap = { version = "4.5.54", features = ["derive"] }

# Client-specific dependencies
uuid = { version = "1.19.0", features = ["v4", "serde"] }
dashmap = "6.1.0"
once_cell = "1.21.3"

# Benchmarking and testing
criterion = { version = "0.8.1", features = ["html_reports"] }
tempfile = "3.24.0"
tokio-test = "0.4.5"

# Random number generation
rand = "0.9.2"

# High-performance memory allocator
mimalloc = { version = "0.1.48", default-features = false }

# TLS support
tokio-rustls = "0.26.4"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"

# Configuration
toml = "0.9.8"


# Workspace-level profiles - Optimized for maximum performance
[profile.release]
lto = "fat"       # Enhanced LTO for better optimization
codegen-units = 1 # Single codegen unit for best optimization
panic = "abort"   # Smaller binary, better performance
strip = true      # Remove debug symbols
opt-level = 3     # Maximum optimization level
# Note: target-cpu = "native" should be set via RUSTFLAGS environment variable

[profile.dev]
debug = 1
overflow-checks = true

[profile.test]
debug = 1

# Benchmarking profile
[profile.bench]
debug = 1
lto = "thin"

# Workspace metadata
[workspace.metadata]
docs-rs-features = ["full"]

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-hook = ["cargo", "test", "--workspace"]

# Workspace aliases for common commands
[workspace.metadata.commands]
# Run all tests
test-all = "cargo test --workspace"
# Run benchmarks  
bench-all = "cargo bench --workspace"
# Check all packages
check-all = "cargo check --workspace"
# Build all packages in release mode
build-all = "cargo build --workspace --release"
# Run clippy on all packages
lint-all = "cargo clippy --workspace -- -D warnings"
# Format all code
fmt-all = "cargo fmt --all"

# Optional: Global patch section for dependency overrides if needed
# [patch.crates-io]
# Replace with local versions if developing dependencies locally
